Fix sticky nav width and z-index

--- a/src/css/formed/_sticky.scss
+++ b/src/css/formed/_sticky.scss
@@ -2,9 +2,9 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
-    z-index: $zindex-sticky;
+    z-index: 999;
 }
 
 .product-menu-open .sticky {
-	width: calc(100% - $sidenav-width);
+	width: calc(100% - #{$sidenav-width});
 }
